add documentation for interval approx

--- a/doc/pmgap.bib
+++ b/doc/pmgap.bib
@@ -31,3 +31,10 @@ url="https://doi.org/10.1007/s13160-017-0247-y"
   journal={arXiv preprint arXiv:1812.05261},
   year={2018}
 }
+
+@article{asashiba2019approximation,
+  title={On Approximation of $2 $ D Persistence Modules by Interval-decomposables},
+  author={Asashiba, Hideto and Escolar, Emerson G and Nakashima, Ken and Yoshiwaki, Michio},
+  journal={arXiv preprint arXiv:1911.01637},
+  year={2019}
+}
