--- a/doc/pmgap.bib
+++ b/doc/pmgap.bib
@@ -47,3 +47,10 @@ url="https://doi.org/10.1007/s13160-017-0247-y"
   year={2018},
   organization={Schloss Dagstuhl, Leibniz-Zentrum f{\"u} Informatik GmbH}
 }
+
+@article{buchet2018realizationsarxiv,
+  title={Realizations of indecomposable persistence modules of arbitrarily large dimension},
+  author={Buchet, Micka{\"e}l and Escolar, Emerson G},
+  journal={arXiv preprint arXiv:1803.05722},
+  year={2018}
+}
