implement separate-and-shift

--- a/doc/pmgap.bib
+++ b/doc/pmgap.bib
@@ -54,3 +54,14 @@ url="https://doi.org/10.1007/s13160-017-0247-y"
   journal={arXiv preprint arXiv:1803.05722},
   year={2018}
 }
+
+@article{buchet2020every,
+  title={Every 1D persistence module is a restriction of some indecomposable 2D persistence module},
+  author={Buchet, Micka{\"e}l and Escolar, Emerson G},
+  journal={Journal of Applied and Computational Topology},
+  volume={4},
+  number={3},
+  pages={387--424},
+  year={2020},
+  publisher={Springer}
+}
