--- a/doc/pmgap.bib
+++ b/doc/pmgap.bib
@@ -1,3 +1,14 @@
+@article{asashiba2023approximation,
+  title={Approximation by interval-decomposables and interval resolutions of persistence modules},
+  author={Asashiba, Hideto and Escolar, Emerson G and Nakashima, Ken and Yoshiwaki, Michio},
+  journal={Journal of Pure and Applied Algebra},
+  volume={227},
+  number={10},
+  pages={107397},
+  year={2023},
+  publisher={Elsevier}
+}
+
 @article{asashiba2017,
 author="Asashiba, Hideto
 and Nakashima, Ken
